[package]
name = "omega"
version = "0.1.0"
edition = "2024"

[build-dependencies]
cxx-build = "1.0"

[dependencies]
anyhow = "1.0.100"           # Error handling
once_cell = "1.21"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
syn = { version = "2.0.106", features = ["full", "extra-traits"] }
cxx = "1.0"

pollster = "0.4.0"

env_logger = "0.11.8"
quote = "1.0.40"
